--- a/aplikasi.html
+++ b/aplikasi.html
@@ -94,7 +94,7 @@ s0.parentNode.insertBefore(s1,s0);
           <li><a href="#intro">Jasa Aplikasi PWA</a></li>
           <li><a href="designuiux.html">Design UI/UX</a></li>
           </li>
-          <li><a href="https://api.whatsapp.com/send?phone=6285606033213&text=Saya%20tertarik">Whatsapp Kami</a></li>
+          <li><a href="https://api.whatsapp.com/send?phone=6285606033213&text=Saya%20tertarik"><i class="fa fa-phone"></i>+6285606033213(WA)</a></li>
         </ul>
       </nav><!-- .main-nav -->
       
@@ -450,7 +450,7 @@ s0.parentNode.insertBefore(s1,s0);
             </li>
   
             <li>
-              <a data-toggle="collapse" href="#faq6" class="collapsed">Harganya berapa kak?<i class="ion-android-remove"></i></a>
+              <a data-toggle="collapse" href="#faq6" class="collapsed">Harganya berapa?<i class="ion-android-remove"></i></a>
               <div id="faq6" class="collapse" data-parent="#faq-list">
                 <p>
                   Harganya menyesuaikan fitur anda pesan paling murah Rp 500.0000 itu sudah mendapatkan jenis fitur yang informatif sekali dan bermanfaat yntuk Aplikasi PWA, dan paling mahal Rp 4000.000 atau bisa lebih. Semuanya disesesuikan dengan fitur kebutuhannya.
@@ -462,7 +462,7 @@ s0.parentNode.insertBefore(s1,s0);
               <a data-toggle="collapse" href="#faq7" class="collapsed">Apa saya bisa request fitur?<i class="ion-android-remove"></i></a>
               <div id="faq7" class="collapse" data-parent="#faq-list">
                 <p>
-                  Tentu saja bisa kak, 
+                  Tentu saja bisa, 
                 </p>
               </div>
             </li>
