--- a/designuiux.html
+++ b/designuiux.html
@@ -94,7 +94,7 @@ s0.parentNode.insertBefore(s1,s0);
           <li><a href="aplikasi.html">Jasa Aplikasi PWA</a></li>
           <li><a href="#intro">Design UI/UX</a></li>
           </li>
-          <li><a href="https://api.whatsapp.com/send?phone=6285606033213&text=Saya%20tertarik">Whatsapp Kami</a></li>
+          <li><a href="https://api.whatsapp.com/send?phone=6285606033213&text=Saya%20tertarik"><i class="fa fa-phone"></i>+6285606033213(WA)</a></li>
         </ul>
       </nav><!-- .main-nav -->
       
